clusters/k3s/apps/system/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: docker-services
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.40
ports:
  - port: 8123
    protocol: TCP
